Fix crash on android webview upon impl side invalidation

Previously we assume that LayerTreeHostImpl::InvalidatecontentOnImplSide
is called only when it's in the impl frame. Actually for devices with
synchronous compositor, e.g. Android Webview, that's not the case as it
may ask for a frame at any time. Updating the DCHECK to fix the crash.

Bug: 832072
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I96c88bf3589aa65eab02ff40bebb9a826cd0266b
Reviewed-on: https://chromium-review.googlesource.com/1101544
Reviewed-by: Khushal <khushalsagar@chromium.org>
Commit-Queue: Yi Gu <yigu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#567465}
Former-commit-id: 7baddbd873187e58107543441f6bee943b35f1c4